--- a/agora-vai/src/styles/teste.css
+++ b/agora-vai/src/styles/teste.css
@@ -5,17 +5,31 @@
 }
 
 .total-money.gray {
-  border-left: 5px solid red; 
+  border-left: 1px solid gray; 
   border-radius: 4px 0px 0px 4px;
 }
 
-.card.green{
-  border-left: 5px solid  rgba(3, 184, 152, 1);
-  border-radius: 4px 0px 0px 4px; 
+
+.total-money{
+  margin-top: 30px;
+  gap: 7px;
+  display: flex;
+  border: 1px solid #E9ECEF;
+  border-radius: 4px;
+  flex-direction: column;
+}
+
+
+.card.green {
+  border-left: 5px solid rgba(3, 184, 152, 1);
+  border-radius: 4px 0px 0px 4px;
+  margin-top: 22px;
+  margin-bottom: 14px;
 }
 
 .card.gray{
-  border-left: 5px solid red; 
+  border-left: 5px solid gray; 
   border-radius: 4px 0px 0px 4px;
-
+  margin-top: 22px;
+  margin-bottom: 14px;
 }
